# marvelous-databricks-course-peyman-93

./: .gitignore  cluster_config.json  databricks.yml  project_config.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: cd.yml
notebooks/: deploy_01_basic_model_serving.py  deploy_02_fe_model_serving.py  deploy_03_feature_serving.py  deploy_04_ab_testing.py  deploy_05_custom_db_model.py  experiment_tracking.py  feature_engineering_demo.py  log_register_model.py  run_data_processing.py  train_register_basic_model.py  train_register_custom_model.py  train_register_fe_model.py  week6.01_create_monitoring_table.py  week6.02_create_alert.py
scripts/: 01.process_data.py  02.train_register_fe_model.py  03.deploy_model.py  04.post_commit_status.py  05.refresh_monitor.py
src/financial_complaints/: config.py  data_processor.py  monitoring.py  utils.py
src/financial_complaints/models/: basic_complaint_model.py  complait_model.py  custom_complaint_model.py  financial_complaints_feature_lookup_model.py
src/financial_complaints/serving/: fe_model_serving.py  feature_serving.py  model_serving.py
